Corrige login e recuperacao de senha
